--- a/src/index.css
+++ b/src/index.css
@@ -105,15 +105,17 @@ progress {
   width: 100%;
   height: 12px;
   grid-column: 1 / -1;
+  /* border-radius: 50%; */
+  overflow: hidden;
 }
-
 ::-webkit-progress-bar {
   background-color: var(--color-medium);
-  border-radius: 100px;
+  border-radius: 50px;
 }
 ::-webkit-progress-value {
   background-color: var(--color-theme);
-  border-radius: 100px;
+  border-radius: 50px;
+  transition: width 0.4s ease-in;
 }
 
 .btn {
